# hockey-ranking-algo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: invariant-auditor.md  spec-keeper.md
.claude/commands/: board.md  task-new.md  task.md
analysis/: head_to_head.py  test_head_to_head.py
core/: aggregate.py  game.py  test_aggregate.py  test_game.py
data/: README.md
data/real/: README.md  mhr-2025-top50.json
data/real/raw/: mhr-teams-games-2025-a2-v123-top50.json
docs/analysis/: closing-schedule-floor-cost.md  decision-memo.md  goal-profile-residual.md
docs/knowledge-bank/: rating-model-test-brief.md
docs/planning/: PLAN.md  operating-model.md  stage-b-plan.md
docs/work/: BOARD.md
docs/work/done/: TASK-01-cross-opponent-invariants.md  TASK-02-mhr-replica.md
docs/work/tasks/: TASK-03-ridge-massey.md  TASK-04-generator-trajectories.md  TASK-05-tiers-frozen-window.md  TASK-06-trend-recency.md  TASK-10-truth-scoring-metrics.md  TASK-12-comparison-runner-report.md  TASK-13-stage-a-tuning.md  TASK-14-point-in-time-truth.md  TASK-15-real-data-loader.md  TASK-16-head-to-head-case-studies.md  TASK-17-closing-schedule-floor-cost.md  TASK-18-goal-profile-residual.md  TASK-19-real-data-evaluation-gate.md
docs/work/todo/: INDEX.md  TASK-01-cross-opponent-invariants.md  TASK-02-mhr-replica.md  TASK-03-ridge-massey.md  TASK-04-generator-trajectories.md
generator/: README.md  io.py  simulate.py  test_io.py  test_simulate.py  test_world.py  world.py
harness/: README.md  __init__.py  adapters.py  invariants.py  metrics.py  real_gate.py  run.py  test_harness.py  test_metrics.py  test_real_gate.py  test_run.py  test_tune.py  tune.py
hockey_rating_spike.egg-info/: PKG-INFO  SOURCES.txt
ingest/: mhr_loader.py  test_mhr_loader.py
models/: README.md  bespoke.py  mhr_replica.py  ridge_massey.py  test_bespoke_credit.py  test_bespoke_cross_opponent.py  test_bespoke_rate.py  test_bespoke_trend.py  test_bespoke_tuning.py  test_mhr_replica.py  test_ridge_massey.py  test_tiers.py  tiers.py
reports/: README.md  comparison.md  real-data-quality.md  real-eval.md  real-h2h.md
scenarios/: README.md  __init__.py  builders.py  test_s01_disconnected.py  test_s02_bridge_game.py  test_s03_schedule_inflation.py  test_s04_stale_opponent.py  test_s05_giant_killer.py  test_s06_win_but_should_drop.py  test_s07_close_vs_tier.py  test_s08_tie_handling.py  test_s09_sparse_vs_dense.py  test_s10_transitivity_trap.py  test_s11_momentum.py  test_s12_blowout_incentive.py  test_s13_freeze_window.py  test_s14_closing_schedule.py  test_s15_goal_profile.py
