[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hockey-rating-spike"
version = "0.1.0"
description = "Transparent, deterministic, fair youth-hockey rating model — research spike"
requires-python = ">=3.11"
# Level-0/Level-1 (the data contract) are pure-stdlib arithmetic.
# numpy enters in Phase 2 for seeded Poisson goal draws (the synthetic world model).
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
# Auto-discover packages (any dir with __init__.py). Adding a new module needs NO edit here — this is
# what lets parallel tasks add modules without fighting over pyproject (operating-model §4 de-contention).
exclude = ["docs*", "data*", "reports*", "scenarios*"]

[tool.pytest.ini_options]
# Determinism is sacred (I8). No explicit testpaths: pytest auto-discovers test_*.py everywhere (it
# ignores .venv/.git by default), so a new package's tests run without a shared-config edit.
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E741: `l` is normally an ambiguous name, but `w`/`l`/`t` is the brief §5 Level-1
# data contract (wins/losses/ties). Keeping the contract's triple intact is clearer than
# breaking its symmetry (`losses` alongside `w`/`t`). Narrow, intentional exception.
ignore = ["E741"]
